# MIGRACAO_PF

./: README.md  index.html  main.py  pyproject.toml
dataset/: SISMIGRA_REGISTROS_ATIVOS_2026_01.csv  SISMIGRA_REGISTROS_ATIVOS_2026_02.csv  STI_MOVIMENTO_2026_01.csv  STI_MOVIMENTO_2026_02.csv
notebook/: analise_inicial.ipynb  relatorio.html  relatorio.qmd  relatorio.quarto_ipynb_1  relatorio.quarto_ipynb_2  relatorio.quarto_ipynb_3  relatorio.quarto_ipynb_4  relatorio.quarto_ipynb_5  relatorio.quarto_ipynb_6
